# backend/controllers/mainingre_controller.go
@@ -164,50 +164,6 @@ func (ctl *MainingreController) DeleteMainingre(c *gin.Context) {
 	c.JSON(200, gin.H{"result": fmt.Sprintf("ok deleted %v", id)})
 }
 
-// UpdateMainingre handles PUT requests to update a mainingre entity
-// @Summary Update a mainingre entity by ID
-// @Description update mainingre by ID
-// @ID update-mainingre
-// @Accept   json
-// @Produce  json
-// @Param id path int true "Mainingre ID"
-// @Param mainingre body ent.Mainingre true "Mainingre entity"
-// @Success 200 {object} ent.Mainingre
-// @Failure 400 {object} gin.H
-// @Failure 500 {object} gin.H
-// @Router /mainingres/{id} [put]
-func (ctl *MainingreController) UpdateMainingre(c *gin.Context) {
-	id, err := strconv.ParseInt(c.Param("id"), 10, 64)
-	if err != nil {
-		c.JSON(400, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
-
-	obj := ent.Mainingre{}
-	if err := c.ShouldBind(&obj); err != nil {
-		c.JSON(400, gin.H{
-			"error": "mainingre binding failed",
-		})
-		return
-	}
-	obj.ID = int(id)
-	fmt.Println(obj.ID)
-	m, err := ctl.client.Mainingre.
-		UpdateOneID(int(id)).
-		SetMAININGREDIENTNAME(obj.MAININGREDIENTNAME).
-		Save(context.Background())
-	if err != nil {
-		c.JSON(400, gin.H{
-			"error": "update failed",
-		})
-		return
-	}
-
-	c.JSON(200, m)
-}
-
 // NewMainingreController creates and registers handles for the mainingre controller
 func NewMainingreController(router gin.IRouter, client *ent.Client) *MainingreController {
 	mc := &MainingreController{
@@ -229,6 +185,5 @@ func (ctl *MainingreController) register() {
 	// CRUD
 	mainingres.POST("", ctl.CreateMainingre)
 	mainingres.GET(":id", ctl.GetMainingre)
-	mainingres.PUT(":id", ctl.UpdateMainingre)
 	mainingres.DELETE(":id", ctl.DeleteMainingre)
 }
