# backend/controllers/user_controller.go
@@ -165,51 +165,6 @@ func (ctl *UserController) DeleteUser(c *gin.Context) {
 	c.JSON(200, gin.H{"result": fmt.Sprintf("ok deleted %v", id)})
 }
 
-// UpdateUser handles PUT requests to update a user entity
-// @Summary Update a user entity by ID
-// @Description update user by ID
-// @ID update-user
-// @Accept   json
-// @Produce  json
-// @Param id path int true "User ID"
-// @Param user body ent.User true "User entity"
-// @Success 200 {object} ent.User
-// @Failure 400 {object} gin.H
-// @Failure 500 {object} gin.H
-// @Router /users/{id} [put]
-func (ctl *UserController) UpdateUser(c *gin.Context) {
-	id, err := strconv.ParseInt(c.Param("id"), 10, 64)
-	if err != nil {
-		c.JSON(400, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
-
-	obj := ent.User{}
-	if err := c.ShouldBind(&obj); err != nil {
-		c.JSON(400, gin.H{
-			"error": "user binding failed",
-		})
-		return
-	}
-	obj.ID = int(id)
-	fmt.Println(obj.ID)
-	u, err := ctl.client.User.
-		UpdateOneID(int(id)).
-		SetUSEREMAIL(obj.USEREMAIL).
-		SetUSERNAME(obj.USERNAME).
-		Save(context.Background())
-	if err != nil {
-		c.JSON(400, gin.H{
-			"error": "update failed",
-		})
-		return
-	}
-
-	c.JSON(200, u)
-}
-
 // NewUserController creates and registers handles for the user controller
 func NewUserController(router gin.IRouter, client *ent.Client) *UserController {
 	uc := &UserController{
@@ -231,6 +186,5 @@ func (ctl *UserController) register() {
 	// CRUD
 	users.POST("", ctl.CreateUser)
 	users.GET(":id", ctl.GetUser)
-	users.PUT(":id", ctl.UpdateUser)
 	users.DELETE(":id", ctl.DeleteUser)
 }
